加入  google login oauth

--- a/GoogleLoginDemo/Web.config
+++ b/GoogleLoginDemo/Web.config
@@ -9,6 +9,9 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="google_client_id" value="489080823337-rijn63rcn7fitcm32d0rvfqt1h32mtoi.apps.googleusercontent.com"/>
+    <add key="google_client_secret" value="I4A5jY_-kjr364pOAd5CXEyQ"/>
+    <add key="google_redirect_url" value="http://localhost:57189/Login/LoginHandler"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
